# fullstack-nd004

blog/: __init__.py  app.py  db.py  db_helpers.py
blog/templates/: base.html  create.html  index.html
catalog/catalog/: __init__.py  auth.py  catalog.py  crud.py  dance.py  models.py  oauth.py  utils.py
catalog/catalog/templates/: add.html  category_items.html  delete.html  edit.html  index.html  item.html  layout.html  login.html  register.html
final/: README.md  pyproject.toml  requirements.txt  run.py  start_server.sh
final-frontend/: .eslintrc  package-lock.json  package.json
final-frontend/src/: App.js  index.css  index.js
final-frontend/src/actions/: alert.js  auth.js  categories.js  category.js  item.js  items.js
final-frontend/src/components/: CategoryList.js  Header.js  ItemList.js  Main.js  MainConnected.js  NewCategory.js
final-frontend/src/config/: base.js  (+2 more)
final/catalog/: __init__.py  config.py  errors.py  jwttoken.py  models.py  schemas.py
final/catalog/controllers/: auth.py  category.py  item.py  items.py
final/catalog/models/: __init__.py  category.py  item.py  user.py
final/catalog/schemas/: base.py  category.py  item.py  user.py
final/catalog/utils/: decorators.py
final/tests/: conftest.py  dump.sql  test_jwttoken.py
final/tests/controllers/: test_auth.py  test_category.py  test_item.py
neighborhood-map/: run.py  schema.sql
neighborhood-map/neighborhood_map/: __init__.py  api.py  db.py  db_helpers.py  index.html  static.py
portfolio/: app.py
portfolio/templates/: about.html  home.html  layout.html  works.html
(+57 files in other folders)
