[tool.poetry]
name = "Catalog Server"
version = "0.1.0"
description = ""
authors = ["Duc-Minh Phan <alephvn@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
flask = "^1.0"
SQLAlchemy = "^1.2"
marshmallow = "^2.17"
PyJWT = "^1.7"
Flask-SQLAlchemy = "^2.3"
google-api-python-client = "^1.7"
google-auth = "^1.6"
MySQL-python = "^1.2"
flask-cors = "^3.0"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
